<resources>
    <string name="app_name">da401a_assignment_1_v2 </string>

    <!-- Strings for testing purposes -->
    <string name="test_1">SUCCESS!</string>
    <string name="test_2">TESTING</string>

    <!-- Startup view -->
    <string name="message">Loading... </string>

    <!-- Create new account view -->
    <string name="newAccount_headline">Welcome new user! </string>
    <string name="newAccount_message">As a new user, please enter your first name and
    last name down below before you continue </string>
    <string name="newAccount_enterFName"><i>Enter first name </i></string>
    <string name="newAccount_enterLName"><i>Enter last name </i></string>
    <string name="newAccount_btn">Continue </string>

    <!-- Navigation drawer view -->
    <string name="navigation_item_summary">Financial summary </string>
    <string name="navigation_item_add">Add new income/outcome </string>
    <string name="navigation_item_view">View income/outcome </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_header_title">Loading username...</string>
    <string name="action_settings">Settings</string>

    <!-- GreetingFragment view -->
    <string name="greeting_name">Dear! </string>
    <string name="greeting_info">Choose an option from the navigation menu
        to the left to get started! </string>

    <!-- Enter New Transaction view -->
    <string name="enterTransaction_headline">Enter new income </string>
    <string name="enterTransaction_toggleHeadline">Toggle to enter new outcome instead </string>
    <string name="enterTransaction_title">Enter title: </string>
    <string name="enterTransaction_date">Enter date: </string>
    <string name="enterTransaction_date_button">Pick a date </string>
    <string name="enterTransaction_category">Enter category: </string>
    <string name="enterTransaction_amount">Enter amount: </string>
    <string name="enterTransaction_amount_hint"><i>(kr) </i></string>
    <string name="enterTransaction_btn">Confirm </string>

    <!-- Summary view -->
    <string name="summary_headline">Financial summary </string>
    <string name="summary_income_headline">Total income: </string>
    <string name="summary_outcome_headline">Total outcome: </string>
    <string name="summary_sum_headline">Sum: </string>
    <string name="summary_line">______________________________________ </string>
    <string name="summary_temp">TEMP </string>

    <!-- View transaction view -->
    <string name="viewTransaction_headline">All income</string>
    <string name="viewTransaction_toggleHeadline">Toggle to show outcome instead</string>
    <string name="viewTransaction_filterDateBtnText">Filter after date</string>
    <string name="viewTransaction_resetDateBtnText">Reset date filter</string>

    <!-- Detail view -->
    <string name="detailView_titleTxt">Title: </string>
    <string name="detailView_dateTxt">Added: </string>
    <string name="detailView_amountTxt">Amount (kr): </string>
    <string name="detailView_categoryTxt">Category: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
