<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_background_2"
    tools:context=".EnterTransactionFragment">

    <TextView
        android:id="@+id/enterTransaction_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/enterTransaction_headline"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enterTransaction_titleHeadline"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/enterTransaction_title"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/enterTransaction_title"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterTransaction_headline" />

    <EditText
        android:id="@+id/enterTransaction_title"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:backgroundTint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterTransaction_headline" />

    <TextView
        android:id="@+id/enterTransaction_dateHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:text="@string/enterTransaction_date"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/enterTransaction_datePicker"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterTransaction_titleHeadline" />

    <Button
        android:id="@+id/enterTransaction_datePicker"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="34dp"
        android:alpha="0.8"
        android:background="@drawable/buttondesign"
        android:ems="10"
        android:gravity="center"
        android:inputType="date"
        android:text="@string/enterTransaction_date_button"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterTransaction_title" />

    <TextView
        android:id="@+id/enterTransaction_amountHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:text="@string/enterTransaction_amount"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/enterTransaction_amount"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterTransaction_dateHeadline" />

    <EditText
        android:id="@+id/enterTransaction_amount"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:hint="@string/enterTransaction_amount_hint"
        android:inputType="numberDecimal"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:backgroundTint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterTransaction_datePicker" />

    <TextView
        android:id="@+id/enterTransaction_categoryHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:text="@string/enterTransaction_category"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/enterTransaction_category"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterTransaction_amountHeadline" />

    <Spinner
        android:id="@+id/enterTransaction_category"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="34dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterTransaction_amount" />

    <Button
        android:id="@+id/enterTransaction_confirmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:alpha="0.8"
        android:background="@drawable/buttondesign"
        android:gravity="center"
        android:text="@string/enterTransaction_btn"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/enterTransaction_toggleBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/enterTransaction_toggleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:switchPadding="10sp"
        android:text="@string/enterTransaction_toggleHeadline"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>